frontend/src/components/Event/event.scss
@use '../../scss/abstracts' as *;
@use '../../scss/theme/colors' as *;
@use '../../scss/layout/typography' as *;
@use '../../scss/layout/container' as *;

.event {
	@include breakpoint-max(md) {
		background-color: $gray-300;
		@include full-width();
	}

	header {
		@include breakpoint-max(md) {
			padding-left: $pad-sm;
			padding-right: $pad-sm;
		}
		&::after {
			@include full-width-border();
		}

		#artist-image-col {
			width: auto;
		}

		.artist {
			&-name {
				margin-bottom: rem(5);
				font-family: $font-body;

				@include breakpoint-min(md) {
					margin-bottom: rem(9);
				}
			}
		}

		.details {
			font-weight: 500;
			flex-grow: 1;

			.subtitle,
			.artist-name,
			.row > .col > * {
				@extend %text-truncate;
			}

			@include breakpoint-max(md) {
				.time,
				.loc {
					&::before {
						content: '\2022';
						position: relative;
						margin: 0px rem(3);
					}
				}

				.time::before {
					left: em(-2);
				}
				.loc::before {
					margin: 0px rem(7);
				}
			}

			.row {
				.details-heading {
					flex: 0 0 98px;
				}
				.col {
					min-width: 0;
					flex: 1;
				}
			}

			.subtitle {
				order: -1;
				margin-bottom: rem(5);
			}
			.col:nth-of-type(2) {
				@include breakpoint-min(md) {
					&::before {
						content: '';
						position: absolute;
						height: 14px;
						width: 1px;
						margin-left: -13px;
						margin-top: 1px;
						background: $clr-neutral-5;
					}
				}
			}
		}

		#event-info {
			@include breakpoint-min(md) {
				border-color: $light;
				color: $muted;

				img {
					width: 16px;
				}
			}
		}
	}
}

